MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.21', folder: 'C:\Program Files\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'stick_beitong'
compiling tim.c...
compiling usart.c...
compiling stm32g4xx_ll_gpio.c...
compiling stm32g4xx_ll_utils.c...
compiling gpio.c...
compiling stm32g4xx_ll_exti.c...
compiling stm32g4xx_hal_msp.c...
compiling stm32g4xx_hal_adc.c...
compiling stm32g4xx_it.c...
../Core/Src/main.c(70): error: call to undeclared library function 'sprintf' with type 'int (char *, const char *, ...)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   70 |   sprintf(battery_inf, sizeof(battery_inf), "%3d%%", (int)(remap(180, 196, 0, 10, (float)(adc_vals[4] / 10))) * 10);
      |   ^
../Core/Src/main.c(70): note: include the header <stdio.h> or explicitly provide a declaration for 'sprintf'
../Core/Src/main.c(70): error: call to undeclared function 'remap'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   70 |   sprintf(battery_inf, sizeof(battery_inf), "%3d%%", (int)(remap(180, 196, 0, 10, (float)(adc_vals[4] / 10))) * 10);
      |                                                            ^
../Core/Src/main.c(70): error: incompatible integer to pointer conversion passing 'unsigned int' to parameter of type 'const char *' [-Wint-conversion]
   70 |   sprintf(battery_inf, sizeof(battery_inf), "%3d%%", (int)(remap(180, 196, 0, 10, (float)(adc_vals[4] / 10))) * 10);
      |                        ^~~~~~~~~~~~~~~~~~~
3 errors generated.
compiling main.c...
compiling stm32g4xx_ll_rcc.c...
compiling adc.c...
compiling spi.c...
../Core/Src/maincpp.cpp(235): warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
  235 |                 menu.Add_Elem(1, JoystickDataTransmit, "jinengsai");
      |                                                        ^
../Core/Src/maincpp.cpp(236): warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
  236 |                 menu.Add_Elem(2, nullptr, "GeDouBoji");
      |                                           ^
../Core/Src/maincpp.cpp(237): warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
  237 |                 menu.Add_Elem(3, nullptr, "XBOX     ");
      |                                           ^
3 warnings generated.
compiling maincpp.cpp...
compiling dma.c...
compiling stm32g4xx_hal_flash_ramfunc.c...
compiling stm32g4xx_hal.c...
compiling stm32g4xx_hal_gpio.c...
compiling stm32g4xx_ll_adc.c...
compiling stm32g4xx_hal_exti.c...
compiling stm32g4xx_hal_pwr.c...
compiling stm32g4xx_hal_flash.c...
compiling stm32g4xx_hal_dma.c...
compiling stm32g4xx_hal_rcc.c...
compiling stm32g4xx_hal_flash_ex.c...
compiling stm32g4xx_hal_dma_ex.c...
compiling stm32g4xx_hal_rcc_ex.c...
compiling stm32g4xx_hal_adc_ex.c...
compiling stm32g4xx_hal_pwr_ex.c...
compiling stm32g4xx_hal_cortex.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling stm32g4xx_ll_spi.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling stm32g4xx_ll_pwr.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling stm32g4xx_hal_tim_ex.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling stm32g4xx_ll_dma.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling stm32g4xx_hal_tim.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling stm32g4xx_ll_tim.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling stm32g4xx_hal_uart.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling lcd.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling stm32g4xx_hal_uart_ex.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling sky_button.cpp...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling lcd_init.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling system_stm32g4xx.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling drawer.cpp...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling joystick.c...
ArmClang: fatal error: no target architecture given; use --target=arm-arm-none-eabi or --target=aarch64-arm-none-eabi
compiling sky_menu.cpp...
"stick_beitong\stick_beitong.axf" - 3 Error(s), 3 Warning(s).
Target not created.
Build Time Elapsed:  00:00:09
